clusters/hetzner/apps/utilities/registry-pullthrough/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: pullthrough
  name: registry-pullthrough
  namespace: utilities
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
      app.kubernetes.io/instance: pullthrough
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
        app.kubernetes.io/instance: pullthrough
    spec:
      containers:
        - image: distribution/registry:2.8.2
          imagePullPolicy: Always
          name: registry
          resources:
            requests:
              memory: 300M
              cpu: 50m
            limits:
              memory: 1Gi
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
            - containerPort: 5001
              name: http-metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /metrics
              port: 5001
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /metrics
              port: 5001
            initialDelaySeconds: 5
