clusters/hetzner/apps/utilities/registry-pullthrough/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-pullthrough
  namespace: utilities
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: pullthrough
spec:
  clusterIP: None
  ports:
    - name: http
      port: 5000
      targetPort: http
    - name: http-metrics
      port: 5001
      targetPort: http-metrics
  selector:
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: pullthrough
  type: ClusterIP
