clusters/hetzner/apps/utilities/registry-pullthrough/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-pullthrough
  namespace: utilities
spec:
  ingressClassName: istio
  rules:
    - host: container-proxy.svc.behn.dev
      http:
        paths:
          - backend:
              service:
                name: registry-pullthrough
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - container-proxy.svc.behn.dev
      secretName: beryjuorg-gw-registries
